--- a/src/Style/_camera.scss
+++ b/src/Style/_camera.scss
@@ -9,7 +9,7 @@
   margin: 2rem auto;
   text-align: center;
   color: $claro;
-  box-shadow: 0 0 25px rgba(247, 27, 228, 0.4);
+  box-shadow: 0 0 25px rgb(0, 204, 255);
   display: flex;
   flex-direction: column;
  
