--- a/src/Style/_modal.scss
+++ b/src/Style/_modal.scss
@@ -14,8 +14,6 @@ dialog.modal {
 
 
   border: 2px solid $destaque-rosa;
-  box-shadow: 0 0 12px rgba(163, 7, 132, 0.7),
-              0 8px 24px rgba(0, 0, 0, 0.4);
 
   z-index: 1000;
 
@@ -41,6 +39,7 @@ dialog.modal {
     font-size: 1.2rem;
     background: $claro;
     color: $fundo;
+    margin-top: 1.5rem;
     
   }
 
