--- a/src/Style/_modal.scss
+++ b/src/Style/_modal.scss
@@ -11,10 +11,8 @@ dialog.modal {
   border-radius: 16px;
   padding: 2rem;
   text-align: center;
-
-
+  margin-top: 25.5rem;
   border: 2px solid $destaque-rosa;
-
   z-index: 1000;
 
   .titulo {
